# BMI203-HW1-FAST-AQ-Parser

./: example.py  pyproject.toml
seqparser/: parse.py  seq.py
tests/: bad.fasta  bad.fastq  good.fasta  good.fastq  test_parsers.py  test_transcribe.py
